--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <dependencies>
 
-        <dependency>
+        <!--<dependency>
             <groupId>us.codecraft</groupId>
             <artifactId>webmagic-core</artifactId>
             <version>0.7.3</version>
@@ -25,7 +25,7 @@
                     <artifactId>slf4j-log4j12</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
