--- a/pom.xml
+++ b/pom.xml
@@ -70,11 +70,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.mybatis.caches/mybatis-ehcache -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.mybatis.caches</groupId>
             <artifactId>mybatis-ehcache</artifactId>
             <version>1.2.1</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
